--- a/Views/Home/Menu.nl.cshtml
+++ b/Views/Home/Menu.nl.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+@{
     Layout = "_Layout";
     ViewData["Title"] = "Menu";
 }
@@ -12,43 +12,43 @@
         <div class="menu-header">
             <h1 class="menu-title">Restaurant Reserva</h1>
             <div class="menu-divider"></div>
-            <p class="menu-subtitle">Cuisine Belge Authentique</p>
+            <p class="menu-subtitle">Authentieke Belgische Keuken</p>
         </div>
 
         <div class="menu-sections">
             <section class="menu-section">
                 <h2 class="section-title">
                     <span class="section-icon">🍽️</span>
-                    Entrées
+                    Voorgerechten
                 </h2>
                 <div class="menu-items">
                     <div class="menu-item">
                         <div class="item-header">
-                            <h3 class="item-name">Croquettes de Crevettes Grises</h3>
+                            <h3 class="item-name">Grijze Garnalenkroketten</h3>
                             <span class="item-price">18€</span>
                         </div>
-                        <p class="item-description">Crevettes grises du Nord, béchamel crémeuse, panure dorée, sauce tartare maison</p>
+                        <p class="item-description">Noordzee grijze garnalen, romige bechamelsaus, goudbruine paneermeel, huisgemaakte tartaarsaus</p>
                     </div>
                     <div class="menu-item">
                         <div class="item-header">
-                            <h3 class="item-name">Salade Liégeoise</h3>
+                            <h3 class="item-name">Luikse Salade</h3>
                             <span class="item-price">16€</span>
                         </div>
-                        <p class="item-description">Haricots verts, pommes de terre, lardons fumés, vinaigrette à la moutarde de Meaux</p>
+                        <p class="item-description">Groene bonen, aardappelen, gerookt spek, mosterdvinaigrette</p>
                     </div>
                     <div class="menu-item">
                         <div class="item-header">
-                            <h3 class="item-name">Jambon d'Ardennes</h3>
+                            <h3 class="item-name">Ardenner Ham</h3>
                             <span class="item-price">14€</span>
                         </div>
-                        <p class="item-description">Tranches fines de jambon fumé des Ardennes, beurre de ferme, pain artisanal</p>
+                        <p class="item-description">Dunne plakken gerookte Ardenner ham, boerenboter, ambachtelijk brood</p>
                     </div>
                     <div class="menu-item">
                         <div class="item-header">
-                            <h3 class="item-name">Soupe à la Bière</h3>
+                            <h3 class="item-name">Biersoep</h3>
                             <span class="item-price">12€</span>
                         </div>
-                        <p class="item-description">Bière brune belge, fromage, croûtons, crème fraîche</p>
+                        <p class="item-description">Donker Belgisch bier, kaas, croutons, verse room</p>
                     </div>
                 </div>
             </section>
@@ -56,51 +56,51 @@
             <section class="menu-section">
                 <h2 class="section-title">
                     <span class="section-icon">🥩</span>
-                    Plats Principaux
+                    Hoofdgerechten
                 </h2>
                 <div class="menu-items">
                     <div class="menu-item featured">
                         <div class="item-header">
-                            <h3 class="item-name">Carbonnade Flamande</h3>
+                            <h3 class="item-name">Vlaamse Stoverij</h3>
                             <span class="item-price">24€</span>
                         </div>
-                        <p class="item-description">Bœuf mijoté à la bière brune, oignons caramélisés, pain d'épices, frites maison</p>
-                        <span class="featured-badge">Spécialité</span>
+                        <p class="item-description">Rundvlees gestoofd in donker bier, gekarameliseerde uien, peperkoek, huisgemaakte frietjes</p>
+                        <span class="featured-badge">Specialiteit</span>
                     </div>
                     <div class="menu-item">
                         <div class="item-header">
-                            <h3 class="item-name">Waterzooi de Poulet</h3>
+                            <h3 class="item-name">Kippenwaterzooi</h3>
                             <span class="item-price">22€</span>
                         </div>
-                        <p class="item-description">Poulet fermier, légumes du marché, bouillon crémeux, herbes fraîches</p>
+                        <p class="item-description">Boerenkip, marktgroenten, romige bouillon, verse kruiden</p>
                     </div>
                     <div class="menu-item">
                         <div class="item-header">
-                            <h3 class="item-name">Moules-Frites</h3>
+                            <h3 class="item-name">Mosselen-Friet</h3>
                             <span class="item-price">26€</span>
                         </div>
-                        <p class="item-description">Moules de Zélande, vin blanc, échalotes, céleri, frites belges, mayonnaise maison</p>
+                        <p class="item-description">Zeeuwse mosselen, witte wijn, sjalotten, selderij, Belgische frietjes, huisgemaakte mayonaise</p>
                     </div>
                     <div class="menu-item">
                         <div class="item-header">
-                            <h3 class="item-name">Chicons au Gratin</h3>
+                            <h3 class="item-name">Witloof in de Oven</h3>
                             <span class="item-price">20€</span>
                         </div>
-                        <p class="item-description">Endives braisées, jambon, béchamel, fromage gratiné, purée de pommes de terre</p>
+                        <p class="item-description">Gebraden witloof, ham, bechamelsaus, gratinerende kaas, aardappelpuree</p>
                     </div>
                     <div class="menu-item">
                         <div class="item-header">
-                            <h3 class="item-name">Lapin à la Bière</h3>
+                            <h3 class="item-name">Konijn op Bier</h3>
                             <span class="item-price">23€</span>
                         </div>
-                        <p class="item-description">Cuisses de lapin, bière brune, pruneaux, pommes de terre nouvelles</p>
+                        <p class="item-description">Konijnenbouten, donker bier, pruimen, nieuwe aardappelen</p>
                     </div>
                     <div class="menu-item">
                         <div class="item-header">
-                            <h3 class="item-name">Boulettes à la Liégeoise</h3>
+                            <h3 class="item-name">Luikse Balletjes</h3>
                             <span class="item-price">21€</span>
                         </div>
-                        <p class="item-description">Boulettes de viande, sirop de Liège, frites, compote de pommes</p>
+                        <p class="item-description">Vleesballetjes, Luikse siroop, frietjes, appelmoes</p>
                     </div>
                 </div>
             </section>
@@ -113,31 +113,31 @@
                 <div class="menu-items">
                     <div class="menu-item">
                         <div class="item-header">
-                            <h3 class="item-name">Gaufres de Liège</h3>
+                            <h3 class="item-name">Luikse Wafels</h3>
                             <span class="item-price">8€</span>
                         </div>
-                        <p class="item-description">Gaufres chaudes, sucre perlé, chantilly, sirop de Liège</p>
+                        <p class="item-description">Warme wafels, parelsuiker, slagroom, Luikse siroop</p>
                     </div>
                     <div class="menu-item">
                         <div class="item-header">
-                            <h3 class="item-name">Tarte au Riz</h3>
+                            <h3 class="item-name">Rijsttaart</h3>
                             <span class="item-price">9€</span>
                         </div>
-                        <p class="item-description">Riz au lait, pâte brisée, cannelle, sucre cassonade</p>
+                        <p class="item-description">Rijstpap, korstdeeg, kaneel, bruine suiker</p>
                     </div>
                     <div class="menu-item">
                         <div class="item-header">
                             <h3 class="item-name">Dame Blanche</h3>
                             <span class="item-price">10€</span>
                         </div>
-                        <p class="item-description">Glace vanille, chocolat chaud belge, chantilly, amandes effilées</p>
+                        <p class="item-description">Vanille-ijs, warme Belgische chocolade, slagroom, gesneden amandelen</p>
                     </div>
                     <div class="menu-item">
                         <div class="item-header">
-                            <h3 class="item-name">Mousse au Speculoos</h3>
+                            <h3 class="item-name">Speculoos Mousse</h3>
                             <span class="item-price">9€</span>
                         </div>
-                        <p class="item-description">Mousse légère, biscuits speculoos, caramel au beurre salé</p>
+                        <p class="item-description">Lichte mousse, speculoos koekjes, gezouten botercaramel</p>
                     </div>
                 </div>
             </section>
@@ -145,30 +145,31 @@
             <section class="menu-section">
                 <h2 class="section-title">
                     <span class="section-icon">🍺</span>
-                    Boissons
+                    Dranken
                 </h2>
                 <div class="menu-items">
                     <div class="menu-item">
                         <div class="item-header">
-                            <h3 class="item-name">Sélection de Bières Belges</h3>
+                            <h3 class="item-name">Selectie Belgische Bieren</h3>
                             <span class="item-price">5-12€</span>
                         </div>
-                        <p class="item-description">Trappistes, abbayes, lambics, bières de spécialité</p>
+                        <p class="item-description">Trappisten, abdijbieren, lambieken, speciale bieren</p>
                     </div>
                     <div class="menu-item">
                         <div class="item-header">
-                            <h3 class="item-name">Vins de la Carte</h3>
+                            <h3 class="item-name">Wijnen van de Kaart</h3>
                             <span class="item-price">6-15€</span>
                         </div>
-                        <p class="item-description">Sélection de vins français, italiens et belges</p>
+                        <p class="item-description">Selectie Franse, Italiaanse en Belgische wijnen</p>
                     </div>
                 </div>
             </section>
         </div>
 
         <div class="menu-footer">
-            <p class="footer-note">Tous nos plats sont préparés avec des produits frais et locaux</p>
-            <p class="footer-note">Réservation recommandée</p>
+            <p class="footer-note">Al onze gerechten worden bereid met verse en lokale producten</p>
+            <p class="footer-note">Reservering aanbevolen</p>
         </div>
     </div>
 </div>
+
